@@ -1,5 +1,7 @@
 2005-02-24  Patrick Bernaud  <b-patrick@wanadoo.fr>
 
+	* scripts/notangle_guile.in: New version.
+	
 	* configure.ac, scripts/Makefile.am: Adapted for renaming of script.
 	
 	* scripts/notangle_guile.scm.in: Renamed to notangle_guile.in.
